Fix overflow-x

--- a/src/components/Main/_MainC.scss
+++ b/src/components/Main/_MainC.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     gap: 32px;
+    overflow-x: hidden;
 
     & p{
         margin-bottom: 24px;
